Fix wrap height

--- a/public/css/guarda.css
+++ b/public/css/guarda.css
@@ -1,6 +1,5 @@
 #wrap {
 	min-height: 1440px;
-	height: 100%;
 	margin: 0	auto: -100px;
 }
 
